# Fine-Tuning

./: .gitignore  README.md  pyproject.toml
lllam3/: llama3_fine_tuning.ipynb  loading_and_testing.ipynb
