[project]
name = "finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "unsloth[colab-new]",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
